fix: readAllBytes 向下兼容 Java 8，改用 IOUtils.toString